--- a/Sum Zero/Assembly-CSharp.csproj
+++ b/Sum Zero/Assembly-CSharp.csproj
@@ -51,7 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\ClickTile.cs" />
+     <Compile Include="Assets\Scripts\ClickTile.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
